Fixed all the review comments